--- a/style/style.css
+++ b/style/style.css
@@ -1,35 +1,16 @@
 
 /* Site général */
 /* ************ */
-html, body { height: 98%; }
-#wrap { padding-bottom: 60px; }
-.page {
-	min-height: 100%;
-	position: relative;
-}
-section { min-height: 100%; position: relative; margin: auto; }
-#header {  }
-#nav { background: #99acbd; width: 100%; }
-#nav.fixed { 
-	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
-	position: fixed;
-	top: 0;
-	z-index: 99998;
-}
-#nav ul {
-    list-style: none outside none;
-    margin: 0;
-    padding: 10px;
-}
-#nav ul li {
-    display: inline-block;
-    padding: 0 2px 0 0;
-}
-#nav ul li a {
-    color: #333333;
-    display: block;
-    padding: 0 25px;
-}
+html, body { font-family:Roboto; font-size:16px; line-height:1.4; height:100%; margin:0; padding:0 }
+a { text-decoration:none; color:inherit }
+.container { margin:0 20px; overflow:hidden; *zoom:1 }
+.site-content { padding-top:66px } 
+.header { position:fixed; left:0; right:0; height:66px; line-height:66px; color:#FFF; background-color:#303f9f }
+.header__logo { font-weight:bold; padding:0 25px; float:left; display: none; } 
+.menu { float:left; padding: 0 25px; }
+.menu a { padding:0 10px } 
+.menu a:hover { color:#c6ff00 }
+
 footer {
 	position: absolute;
 	bottom: 0;
@@ -39,8 +20,6 @@ footer {
   background: #b8b296;
   padding: 20px 0;
 }
-#article { overflow:auto; padding-bottom: 50px }
-.titre_haut { text-align: center; margin: 20px 0 0 0; font-size: 4em; }
 
 div.btn_center { margin: auto; text-align: center; }
 div.margin-form { padding: 0 0 1em 0; font-size: 1em; }
@@ -48,18 +27,19 @@ div.wrap { margin-left: 30px; }
 
 .button { 
 	color: white;
-	background-color: #99acbd;
-	border: 2px #99acbd outset;
-	padding: 1px 4px;
+	background-color: #303f9f; /* #99acbd; */
+	border: 2px #99acbd outset; 
+	padding: 3px 4px;
 	text-decoration: none;
 	font-family:"Lucida Grande", "Trebuchet MS", Verdana, Helvetica, sans-serif;
 	font-weight:bold;
 	font-size:0.95em;
+	box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.3);
 }
 .button:visited { color: white; }
 .button:hover {
 	border-style: inset;
-	background-color: #8ED3F5;
+	background-color: #99acbd; /* #8ED3F5; */
 	padding: 2px 3px 0 5px; /* déplacement du texte d'un pixel à droite et en bas */
 }
 
@@ -100,38 +80,100 @@ p { font-size: 1em; }
 /* Style des titres */
 .titre1 { margin-left: 30px; font-size: 1.6em; }
 
-/* Bandeau information */
-#text_enrg { font-size: 1.6em; }
-#info_enrg {
-	display: none;
-	width: 95%;
-	height: 80px;
-	position: fixed;
-	top: 0;
-	margin: 0 auto;
-	/* left: 0; */
-	text-align: center;
-	z-index: 99999;
-}
+
 
 /* **************** */
 /* Style responsive */
 /* **************** */
-@media screen and (max-width: 500px) {
-	p { font-size: 1.8em; }
-	.titre1 { font-size: 1.6em; }
-	#nav.fixed { position: relative; }
-	#nav ul li { font-size: 1em; display: block; padding: 3px 0; text-align: center; }
-	#nav ul li a { font-size: 1em; padding: 3px 0; text-align: center; font-weight: bold; }
-}
-
-@media screen and (max-device-width: 500px) {
-	/* body { zoom: 2; } */
-	#text_enrg { font-size: 1.8em; }
-	p { font-size: 1.8em; }
-	.titre1 { font-size: 1.6em; }
-	#nav.fixed { position: relative; }
-	#nav ul li { font-size: 1.8em; display: block; padding: 3px 0; text-align: center; }
-	#nav ul li a { font-size: 1.8em; padding: 3px 0; text-align: center; font-weight: bold; }
+@media only screen and (max-width: 750px) {
+	.header__logo { display: block; }
+	.site-pusher, .site-container { height:100% }
+	.site-container { overflow:hidden }
+	.site-pusher { 
+		-moz-transition-duration:0.3s; 
+		-o-transition-duration:0.3s; 
+		-webkit-transition-duration:0.3s; 
+		transition-duration:0.3s; 
+		-moz-transform:translateX(0px);
+		-ms-transform:translateX(0px);
+		-webkit-transform:translateX(0px);
+		transform:translateX(0px)
+	}
+	.site-content {
+		position:absolute;
+		top:0px;
+		right:0;
+		left:0;
+		bottom:0;
+		padding-top:0;
+		overflow-y:scroll;
+		-webkit-overflow-scrolling:touch
+	}
+	.header { position:static }
+	.header__icon { 
+		position:relative; 
+		display:block; 
+		float:left; 
+		width:50px; 
+		height:66px; 
+		cursor:pointer }
+	.header__icon:after { 
+		content:''; 
+		position:absolute;
+		display:block;
+		width:1rem;
+		height:0;
+		top:16px;
+		left:15px;
+		-moz-box-shadow:0 10px 0 1px #fff,0 16px 0 1px #fff,0 22px 0 1px #fff;
+		-webkit-box-shadow:0 10px 0 1px #fff,0 16px 0 1px #fff,0 22px 0 1px #fff;
+		box-shadow:0 10px 0 1px #fff,0 16px 0 1px #fff,0 22px 0 1px #fff
+	}
+	.menu { 
+		position:absolute;
+		padding: 10px 0 0;
+		left:0;
+		top:66px;
+		bottom:0;
+		/* overflow-y:scroll; */
+		-webkit-overflow-scrolling:touch;
+		background-color:#2a378b;
+		width:250px;
+		-moz-transform: translate3d(-250px, 0, 0);
+		-ms-transform: translate3d(-250px, 0, 0);
+		-webkit-transform: translate3d(-250px, 0, 0);
+		transform: translate3d(-250px, 0, 0);
+		-moz-transition: -moz-transform 0.3s;
+		-o-transition: -o-transform 0.3s;
+		-webkit-transition: -webkit-transform 0.3s;
+		transition: transform 0.3s;
+	}
+	.menu a { 
+		display:block;
+		height:40px;
+		text-align:center;
+		line-height:40px;
+		border-bottom:1px solid #303f9f
+	}
+	.menu.is_active {
+		-moz-transform: translate3d(0, 0, 0);
+		-ms-transform: translate3d(0, 0, 0);
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+	.with--sidebar .site-pusher {
+		-moz-transform:translateX(250px);
+		-ms-transform:translateX(250px);
+		-webkit-transform:translateX(250px);
+		transform:translateX(250px)
+	}
+	.with--sidebar .site-cache { 
+		position:absolute; 
+		top:0;
+		left:0;
+		right:0;
+		bottom:0;
+		background-color:rgba(0,0,0,0.6)
+	}
 }
 
