--- a/style/style.css
+++ b/style/style.css
@@ -80,6 +80,19 @@ p { font-size: 1em; }
 /* Style des titres */
 .titre1 { margin-left: 30px; font-size: 1.6em; }
 
+/* Bandeau information */
+.text_enrg { font-size: 1.6em; }
+.info_enrg {
+	display: none;
+	width: 100%;
+	height: 80px;
+	position: fixed;
+	top: 0;
+	margin: 0 auto;
+	/* left: 0; */
+	text-align: center;
+	z-index: 99999;
+}
 
 
 /* **************** */
