--- a/style/style.css
+++ b/style/style.css
@@ -78,7 +78,8 @@ p { font-size: 1em; }
 .titre_rel { font-weight: bold; } 
 
 /* Style des titres */
-.titre1 { margin-left: 30px; font-size: 1.6em; }
+.titre1 { margin-left: 0; font-size: 1.6em; }
+
 
 /* Bandeau information */
 .text_enrg { font-size: 1.6em; }
@@ -93,6 +94,27 @@ p { font-size: 1em; }
 	text-align: center;
 	z-index: 99999;
 }
+
+
+/* Page Authentification */
+/* ********************* */
+.divopaque { background-color: rgba(0, 0, 0, 0.6); width: 100%; height: 100%; }
+div.centre {
+    position:absolute;
+    left: 50%;
+    top: 50%;
+    width: 400px;
+    height: 130px;
+    margin-left: -216px; /* Cette valeur doit être la moitié négative de la valeur du width + le padding */
+    margin-top: -76px; /* Cette valeur doit être la moitié négative de la valeur du height + le padding */
+	padding: 16px;
+	border: 1px #000 solid;
+	background-color: #f1f1f1;
+}
+.centre .titre { text-align: center; font-weight: bold; }
+.divlabel { width: 160px; float: left; }
+.divinput { margin: 10px 0; }
+.diverreur { font-size: 12px; margin-top: 6px; color: red; font-weight: 300; }
 
 
 /* **************** */
