--- a/style/style.css
+++ b/style/style.css
@@ -21,8 +21,9 @@ footer {
   padding: 20px 0;
 }
 
+.divchecked { margin-top: 10px; }
 div.btn_center { margin: auto; text-align: center; }
-div.margin-form { padding: 0 0 1em 0; font-size: 1em; }
+div.margin-form { padding: 0 0 1em 0; font-size: 0.7em; }
 div.wrap { margin-left: 30px; }
 
 .button { 
