--- a/style/style.css
+++ b/style/style.css
@@ -153,6 +153,8 @@ div.centre {
 .formConnect input[type="text"] { margin-bottom: -1px; border-bottom-left-radius: 0; border-bottom-right-radius: 0; }
 .formConnect input[type="password"] { margin-bottom: 10px; border-top-left-radius: 0; border-top-right-radius: 0; }
 
+a.icoDeconnect { float: right; margin-right: 20px; }
+i.icoDeconnect { margin-top: 17px; }
 
 /* **************** */
 /* Style responsive */
