--- a/style/style.css
+++ b/style/style.css
@@ -156,6 +156,11 @@ div.centre {
 a.icoDeconnect { float: right; margin-right: 20px; }
 i.icoDeconnect { margin-top: 17px; }
 
+/* Entete de la page d'authentification */
+/* ************************************ */
+
+
+
 /* **************** */
 /* Style responsive */
 /* **************** */
