--- a/style/style.css
+++ b/style/style.css
@@ -102,7 +102,7 @@ p { font-size: 1em; }
 
 /* Page Authentification */
 /* ********************* */
-.divopaque { /* background-color: rgba(0, 0, 0, 0.6); */ width: 100%; height: 100%; }
+.divopaque { /* background-color: rgba(0, 0, 0, 0.6); */ width: 100%; /* height: 100%;*/ }
 div.centre {
     position:absolute;
     left: 50%;
@@ -158,7 +158,12 @@ i.icoDeconnect { margin-top: 17px; }
 
 /* Entete de la page d'authentification */
 /* ************************************ */
-
+.header_outer { background: url(../img/headertile.png) 0 0 no-repeat; height: 150px; }
+.header_container { background: url(../img/header_left.png) 0 100% no-repeat; }
+.header_side { background: url(../img/siteheader.jpg) 0 0 no-repeat; height: 150px; }
+.header_content { min-height: 150px; }
+.header_title { float: left; font-size: 42px; margin-left: 30px; margin-top:40px; }
+.header_bottom { background: url('../img/topbar.jpg') repeat-x scroll 0 0 rgba(0, 0, 0, 1); border-radius: 0.4rem; color: #fff; min-height: 30px; }
 
 
 /* **************** */
@@ -266,5 +271,10 @@ i.icoDeconnect { margin-top: 17px; }
 		border: 0px #000 solid;
 		background-color: rgba(0, 0, 0, 0.0);;
 	}
+	.header_outer { height: 100px; }
+	.header_side { height: 100px; }
+	.header_content { min-height: 100px; }
+	.header_title { font-size: 24px; }
+	.header_bottom { min-height: 10px; }
 }
 
