--- a/style/style.css
+++ b/style/style.css
@@ -100,6 +100,28 @@ p { font-size: 1em; }
 .cbo-psutil { margin-right: 15px; }
 
 
+/* Page Objet */
+/* ********** */
+.zone { 
+	display: block;
+	clear: both;
+	width: 100%;
+	padding: 0;
+	margin-bottom: 20px;
+	font-size: 21px;
+	line-height: inherit;
+	color: #333;
+	border: 0;
+	border-bottom: 1px solid #e5e5e5;
+	margin-top: 30px;
+}
+.element { clear: both; overflow: hidden; }
+.equip {
+	display: block;
+	padding: 10px;
+	float: left;
+}
+
 /* Page Authentification */
 /* ********************* */
 .divopaque { /* background-color: rgba(0, 0, 0, 0.6); */ width: 100%; /* height: 100%;*/ }
